deploy/base/broker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cognito-broker
  labels:
    app.kubernetes.io/name: recognito-broker
    app.kubernetes.io/part-of: recognito
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: recognito-broker
  ports:
    - name: https
      port: 443
      targetPort: https
      protocol: TCP
